feat: add homarr service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,20 @@ services:
       timeout: 10s
       retries: 3
 
+  homarr:
+    image: ghcr.io/ajnart/homarr:latest
+    container_name: homarr
+    restart: unless-stopped
+    ports:
+      - 7575:7575
+    volumes:
+      - ./homarr/configs:/app/data/configs
+      - ./homarr/icons:/app/public/icons
+    networks:
+      - proxy-network
+    environment:
+      - TZ=America/Argentina/Buenos_Aires
+
   # Jellyfin Media Server
   jellyfin:
     image: jellyfin/jellyfin:latest
